# serde-implicit

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
serde-implicit/: Cargo.toml
serde-implicit-proc/: Cargo.toml
serde-implicit-proc/src/: ast.rs  expand.rs  lib.rs  tuple_enum.rs
serde-implicit/src/: content.rs  lib.rs  private.rs
serde-implicit/tests/: dummy.rs  proptest.rs
serde-implicit/tests/ui/: duplicate_tags.rs  duplicate_tags.stderr  flatten_multiple_fields.rs  flatten_multiple_fields.stderr  flatten_not_at_end.rs  flatten_not_at_end.stderr  missing_tags.rs  missing_tags.stderr  repeated_tag.rs  repeated_tag.stderr  tag_and_flatten.rs  tag_and_flatten.stderr
