[package]
name = "serde-implicit-proc"
version = "0.2.1"
edition = "2024"
license = "MIT"
authors = ["Xavier Denis <git@xav.io>"]
homepage = "https://github.com/xldenis/serde-implicit"
description = "proc macros for serde-implicit"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "=1.0.227", features = ["derive"] }
syn = { version = "2.0.101", features = ["printing"] }
