[package]
name = "serde-implicit"
version = "0.1.0"
edition = "2024"

[dependencies]
serde-implicit-proc = { version = "0.1", path = "../serde-implicit-proc" }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.140"
trybuild = "1.0.105"
proptest = "1.6.0"
proptest-derive = "0.5.1"
