[package]
name = "serde-implicit"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Xavier Denis <git@xav.io>"]
homepage = "https://github.com/xldenis/serde-implicit"
description = "the serde(untagged) you wish you had"

[dependencies]
serde-implicit-proc = { version = "0.2", path = "../serde-implicit-proc" }
serde = { version = "=1.0.227", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.140"
trybuild = "1.0.114"
proptest = "1.6.0"
proptest-derive = "0.5.1"
arbitrary-json = "0.1"
proptest-arbitrary-interop = "0.1"
